--- a/lab-python-completed.ipynb
+++ b/lab-python-completed.ipynb
@@ -53,40 +53,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "products = [\"t-shirt\", \"mug\", \"hat\", \"book\", \"keychain\"]\n",
+    "# Step 1\n",
+    "products = [\"t-shirt\", \"mug\", \"hat\", \"book\", \"keychain\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 2\n",
     "inventory = {} "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter the quantity of t-shirt available in inventory:  4\n",
-      "Enter the quantity of mug available in inventory:  5\n",
-      "Enter the quantity of hat available in inventory:  6\n",
-      "Enter the quantity of book available in inventory:  7\n",
-      "Enter the quantity of keychain available in inventory:  8\n"
+      "Enter the quantity of t-shirts available:  10\n",
+      "Enter the quantity of mugs available:  15\n",
+      "Enter the quantity of hats available:  7\n",
+      "Enter the quantity of books available:  25\n",
+      "Enter the quantity of keychains available:  70\n"
      ]
     }
    ],
    "source": [
-    "for product in products:\n",
-    "    quantity = int(input(f\"Enter the quantity of {product} available in inventory: \"))\n",
-    "    inventory[product] = quantity"
+    "# Step 3\n",
+    "quantity = int(input(\"Enter the quantity of t-shirts available: \"))\n",
+    "inventory[\"t-shirt\"] = quantity\n",
+    "\n",
+    "quantity = int(input(\"Enter the quantity of mugs available: \"))\n",
+    "inventory[\"mug\"] = quantity\n",
+    "\n",
+    "quantity = int(input(\"Enter the quantity of hats available: \"))\n",
+    "inventory[\"hat\"] = quantity\n",
+    "\n",
+    "quantity = int(input(\"Enter the quantity of books available: \"))\n",
+    "inventory[\"book\"] = quantity\n",
+    "\n",
+    "quantity = int(input(\"Enter the quantity of keychains available: \"))\n",
+    "inventory[\"keychain\"] = quantity"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,31 +117,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter the name of a product the customer wants to order:  hat\n",
-      "Enter the name of a product the customer wants to order:  mug\n",
-      "Enter the name of a product the customer wants to order:  book\n"
+      "Enter the name of a product that a customer wants to order:  mug\n",
+      "Enter the name of another product that a customer wants to order:  hat\n",
+      "Enter the name of one more product that a customer wants to order:  book\n"
      ]
     }
    ],
    "source": [
-    "for _ in range(3):\n",
-    "    order = input(\"Enter the name of a product the customer wants to order: \")\n",
-    "    if order in products:\n",
-    "        customer_orders.add(order)\n",
-    "    else:\n",
-    "        print(f\"{order} is not available. Please choose from {products}.\")"
+    "# Step 5\n",
+    "product_name = input(\"Enter the name of a product that a customer wants to order: \")\n",
+    "customer_orders.add(product_name)\n",
+    "\n",
+    "product_name = input(\"Enter the name of another product that a customer wants to order: \")\n",
+    "customer_orders.add(product_name)\n",
+    "\n",
+    "product_name = input(\"Enter the name of one more product that a customer wants to order: \")\n",
+    "customer_orders.add(product_name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -156,30 +181,34 @@
      "text": [
       "Order Statistics:\n",
       "Total Products Ordered: 3\n",
-      "Percentage of Products Ordered: 60.00%\n"
+      "Percentage of Unique Products Ordered: 60.0\n"
      ]
     }
    ],
    "source": [
+    "# Step 8\n",
     "print(\"Order Statistics:\")\n",
-    "print(f\"Total Products Ordered: {order_status[0]}\")\n",
-    "print(f\"Percentage of Products Ordered: {order_status[1]:.2f}%\") "
+    "print(\"Total Products Ordered:\", order_status[0])\n",
+    "print(\"Percentage of Unique Products Ordered:\", order_status[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for product in customer_orders:\n",
-    "    if inventory[product] > 0:\n",
-    "        inventory[product] -= 1"
+    "# Step 9\n",
+    "inventory[\"t-shirt\"] -= 1\n",
+    "inventory[\"mug\"] -= 1\n",
+    "inventory[\"hat\"] -= 1\n",
+    "inventory[\"book\"] -= 1\n",
+    "inventory[\"keychain\"] -= 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -187,18 +216,22 @@
      "output_type": "stream",
      "text": [
       "Updated Inventory:\n",
-      "t-shirt: 4\n",
-      "mug: 4\n",
-      "hat: 5\n",
-      "book: 6\n",
-      "keychain: 8\n"
+      "t-shirt: 9\n",
+      "mug: 14\n",
+      "hat: 6\n",
+      "book: 24\n",
+      "keychain: 69\n"
      ]
     }
    ],
    "source": [
+    "# Step 10\n",
     "print(\"Updated Inventory:\")\n",
-    "for product, quantity in inventory.items():\n",
-    "    print(f\"{product}: {quantity}\") "
+    "print(\"t-shirt:\", inventory[\"t-shirt\"])\n",
+    "print(\"mug:\", inventory[\"mug\"])\n",
+    "print(\"hat:\", inventory[\"hat\"])\n",
+    "print(\"book:\", inventory[\"book\"])\n",
+    "print(\"keychain:\", inventory[\"keychain\"])"
    ]
   },
   {
